added some refs

--- a/writing/env-var-review.bib
+++ b/writing/env-var-review.bib
@@ -3651,3 +3651,51 @@
 	pages = {5879},
 	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\JTT7GGLT\\Yu et al. - 2022 - Artificial shelters provide suitable thermal habit.pdf:application/pdf},
 }
+
+@article{mcclintic_effects_2014,
+	title = {Effects of spatiotemporal resource heterogeneity on home range size of {\textless}span style="font-variant:small-caps;"{\textgreater}{A}{\textless}/span{\textgreater}merican beaver},
+	volume = {293},
+	issn = {0952-8369, 1469-7998},
+	shorttitle = {Effects of spatiotemporal resource heterogeneity on home range size of {\textless}span style="font-variant},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/jzo.12128},
+	doi = {10.1111/jzo.12128},
+	language = {en},
+	number = {2},
+	urldate = {2022-11-12},
+	journal = {Journal of Zoology},
+	author = {McClintic, L. F. and Taylor, J. D. and Jones, J. C. and Singleton, R. D. and Wang, G.},
+	month = jun,
+	year = {2014},
+	pages = {134--141},
+}
+
+@article{gittleman_carnivore_1982,
+	title = {Carnivore {Home}-{Range} {Size}, {Metabolic} {Needs} and {Ecology}},
+	volume = {10},
+	issn = {03405443, 14320762},
+	url = {http://www.jstor.org/stable/4599460},
+	abstract = {Relationships between home-range size, metabolic needs of the animals occupying the home-range, and ecology are examined across species in the order Carnivora. Home-range size increases with metabolic needs, irrespective of taxonomic affinity. When the effects of metabolic needs are removed, among ecological variables (including activity pattern, habitat, diet and zonation) only diet shows a significant influence on home-range size. Carnivores with a large proportion of flesh in their diets have particularly large home-ranges. Intraspecific variation in feeding patterns as a determinant of variation in home-range size is emphasized.},
+	number = {1},
+	urldate = {2022-11-12},
+	journal = {Behavioral Ecology and Sociobiology},
+	author = {Gittleman, John L. and Harvey, Paul H.},
+	year = {1982},
+	note = {Publisher: Springer},
+	pages = {57--63},
+}
+
+@article{harvey_primate_1981,
+	title = {Primate home-range size and metabolic needs},
+	volume = {8},
+	issn = {0340-5443, 1432-0762},
+	url = {http://link.springer.com/10.1007/BF00300828},
+	doi = {10.1007/BF00300828},
+	language = {en},
+	number = {2},
+	urldate = {2022-11-12},
+	journal = {Behavioral Ecology and Sociobiology},
+	author = {Harvey, Paul H. and Clutton-Brock, T. H.},
+	month = apr,
+	year = {1981},
+	pages = {151--155},
+}
