--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -118,7 +118,7 @@ habitat productivity hypothesis: Harestad and Bunnel, 1979 [@harestad_home_1979]
 
 \noindent The amount of resources an organism is able to access is a strong determinant of its probability to survive and reproduce. Resource limitations can cause individuals to experience a negative energetic balance, which can then result in lower fitness [@hou_cold_2020; @le_bot_fishery_2019], changes to community structure [@haney_tipping_2018; @burson_competition_2018; @riotte-lambert_environmental_2020; @ghislandi_resource_2018], altered physiology [@dai_pra_ground_2022; @rocha_life_2021; @le_bot_fishery_2019; @wessling_seasonal_2018], lower chance of reproduction [@stefanescu_timing_2021; @schmidt_interplay_2020; @le_bot_fishery_2019; @douglas_relative_2014], or even death [@foley_severe_2008; @berger_climate_2018]. Thus, many organisms will change their behaviors in response to changes in local resource abundance. Some species may respond to fluctuations in resource abundance by, if possible, switching to other food sources [@steinmetz_effects_2021; @le_bot_fishery_2019], reducing energetic costs by reducing body heat [@schmidt_interplay_2020] or entering hibernation or torpor [@fjelldal_nightly_2021; @mohr_cellular_2020; @boyles_optimal_2020], but movement represents one of the most readily available traits that species can adjust, whether this be by modifying their home range [@bista_effect_2022; @bradsworth_using_2022; @lucherini_habitat_1996; @relyea_home_2000; @yu_artificial_2022; @arechavala-lopez_common_2019], migrating [@middleton_green-wave_2018; @geremia_migrating_2019], dispersing [@refs], or moving nomadically [@teitelbaum_beyond_2019; @nandintsetseg_variability_2019].
 
-While there are many other causes of animal movement, the relationship between animal movement and resource abundance has been of interest to biologists for over half a century. @burt_territoriality_1943 considered the search for food as the primary driver for animal movement within an animal's home range. Three decades after, @southwood_habitat_1977 suggested change in resource abundance is a strong determinant of how animals decide when and where to live and reproduce. Two years later, @harestad_home_1979 proposed that the simplest hypothesis for the relationship between an animal's home range size is inversely proportional to resource abundance. More recently, various researches reported that home range size decreases linearly with resource abundance [desert mule deer: @relyea_home_2000; red panda: @bista_effect_2022]. Others demonstrated that spatial needs decrease nonlinearly as habitat productivity increases, with stronger decreases when resources are scarce [e.g., Canadian lynx: @herfindal_prey_2005; carnivores: @nilsen_can_2005; tigers: @simcharoen_female_2014; ferruginous hawks: @watson_ferruginous_2020]. Additionally, an animal's spatial requirements depend strongly on its metabolic rate and diet, as demonstrated over three decades ago by various scientists, including @lindstedt_home_1986 and @reiss_scaling_1988. Thus, there are many drivers of animal movement and many causes of variety between behaviors, and we currently lack a unifying framework for quantifying the effects of resource abundance and unpredictability on animals' spatial needs. **but animals don't only respond to changes in mean**
+While there are many other causes of animal movement, the relationship between animal movement and resource abundance has been of interest to biologists for over half a century. @burt_territoriality_1943 considered the search for food as the primary driver for animal movement within an animal's home range. Three decades after, @southwood_habitat_1977 suggested change in resource abundance is a strong determinant of how animals decide when and where to live and reproduce. Two years later, @harestad_home_1979 proposed that the simplest hypothesis for the relationship between an animal's home range size is inversely proportional to resource abundance. More recently, various researches reported that home range size decreases linearly with resource abundance [desert mule deer: @relyea_home_2000; red panda: @bista_effect_2022]. Others demonstrated that spatial needs decrease nonlinearly as habitat productivity increases, with stronger decreases when resources are scarce [e.g., Canadian lynx: @herfindal_prey_2005; carnivores: @nilsen_can_2005; tigers: @simcharoen_female_2014; ferruginous hawks: @watson_ferruginous_2020]. Additionally, an animal's spatial requirements depend strongly on its metabolic rate and diet, as demonstrated over three decades ago by various scientists [@lindstedt_home_1986; @reiss_scaling_1988; @harvey_primate_1981; @gittleman_carnivore_1982]. Thus, there are many drivers of animal movement and many causes of variety between behaviors, and we currently lack a unifying framework for quantifying the effects of resource abundance and unpredictability on animals' spatial needs. **but animals don't only respond to changes in mean**
 
 **paragraph detailing effects of variance on movement and how little work has been done**
 
@@ -142,7 +142,7 @@ There are many distributions we can assign to $R$, depending on how we quantify 
 
 The expectation of a random variable (i.e. its mean or average, indicated here as ) is the value one can *expect* the random variable to take. $\e(R) = \mu$ to indicate the expectation of the random variable $R$. The mean may not be within the distribution's support (e.g., a non-integer number of prey per day), but $\e(R)$ is still useful for estimating the average long-term resource abundance. When the mean changes over time, as in the case changes in $R$ in highly seasonal regions, we explicitly indicate that $\e(R) = \mu$ changes over time by writing the expectation of $R$ as a function of time, $t$: $\e(R) = \mu(t)$.
 
-The hypothesis that spatial needs decrease with resource abundance is common and well supported, but many studies assume a linear relationship [e.g., @harestad_home_1979; @relyea_home_2000; @bista_effect_2022; @bradsworth_using_2022]. This is problematic because it can lead to questionable estimates and problematic biases, such as negative or excessively small home ranges [e.g., figure 2 in the work of @bista_effect_2022]. Conceptually, the relationship between spatial needs and resource abundance must be nonlinear, since there are limits to how much space an animal is able to explore in its lifetime and the minimum amount of space it requires to survive (which is necessarily greater than zero). The relationship between resource abundance and animals' spatial needs is explored in more depth in a following section.
+The hypothesis that spatial needs decrease with resource abundance is common and well supported, but many studies assume a linear relationship [e.g., @harestad_home_1979; @relyea_home_2000; @rizzuto_forage_2021; @bista_effect_2022; @bradsworth_using_2022; @mcclintic_effects_2014]. This is problematic because it can lead to questionable estimates and problematic biases, such as negative or excessively small home ranges [e.g., figure 2 in the work of @bista_effect_2022]. Conceptually, the relationship between spatial needs and resource abundance must be nonlinear, since there are limits to how much space an animal is able to explore in its lifetime and the minimum amount of space it requires to survive (which is necessarily greater than zero). The relationship between resource abundance and animals' spatial needs is explored in more depth in a following section.
 
 ### Variance in resource abundance, $\var(R)$
 
@@ -352,7 +352,9 @@ knitr::include_graphics('../figures/tapir-example.png')
 
 The spatiotemporal scales over which an event occurs are a main determinant of whether an animal will be able to predict the event and how it will respond to it (or fail to do so). Events which occur at the scale of the organism (i.e. approximately one or more times per lifetime and within the animal's spatial range) are more likely to be perceived as a threat or boon worth preparing for [e.g., elephants: @foley_severe_2008; bison and mule deer: @geremia_migrating_2019]. Smaller organisms (e.g., mice) are more likely to be be severely impacted by a stochastic event than larger ones (e.g. elephants), since larger organisms can have bigger energy reserves [@lindstedt_seasonality_1985], can move longer distances over short periods of time [@hirt_general_2017], and tend to have longer lifespans, generation times, and developmental periods [@brown_toward_2004] that allow them to develop or memory about the frequency and severity of such events [@foley_severe_2008; @polansky_elucidating_2015]. However, the short generation time and high reproductive rate of smaller *r-selected* species [@pianka_r-_1970; @brown_toward_2004] can promote traits that increase survival following frequent extreme events [@examples]. Frequent events may result in changes in animal behavior and memory [framework: @riotte-lambert_environmental_2020; elephants: @foley_severe_2008; bison and mule deer: @geremia_migrating_2019; elk: @falcon-cortes_hierarchical_2021], while events that occur over larger spatiotemporal scales are more likely to promote slower changes through natural selection and evolution [@logares_black_2012; @examples].
 
-Adaptability and responsiveness to change are strong determinants to whether an animal survives in a changing environment [@riotte-lambert_environmental_2020]. An animal's ability to recognize cues and anticipate periods and areas of scarcity or abundance can have appreciable effects on the animal's chance of survival and reproduction. @rickbeil_plasticity_2019 showed that the yearly migration of elk (*Cervus canadensis*) depends on cues such as available forage biomass, hunting pressure, snow fall, and snow melt, while @falcon-cortes_hierarchical_2021 propose that elk move following nonrandom patterns based on memory that can last longer than 11 months. @jonzen_rapid_2006 demonstrated that large-scale, trans-Saharian migrant birds adapt their migration timing based on changes in the beginning of spring. However, relying strongly on short-term cues rather than depending on memory can also cause animals to become trapped in sub-optimal locations [@whales_getting_stuck] or fail to find crucial resources [@polansky_elucidating_2015; @foley_severe_2008]. @merkle_spatial_2019 suggest that Bison (*Bison bison*) rely memory much more than on tracking spring green-up or autumn snow depth.
+Adaptability and responsiveness to change are strong determinants to whether an animal survives in a changing environment [@riotte-lambert_environmental_2020]. An animal's ability to recognize cues and anticipate periods and areas of scarcity or abundance can have appreciable effects on the animal's chance of survival and reproduction. @rickbeil_plasticity_2019 showed that the yearly migration of elk (*Cervus canadensis*) depends on cues such as available forage biomass, hunting pressure, snow fall, and snow melt, while @falcon-cortes_hierarchical_2021 propose that elk move following nonrandom patterns based on memory that can last longer than 11 months. @jonzen_rapid_2006 demonstrated that large-scale, trans-Saharian migrant birds adapt their migration timing based on changes in the beginning of spring. However, relying strongly on short-term cues rather than depending on memory can also cause animals to fail to find crucial resources [@polansky_elucidating_2015; @foley_severe_2008] or become trapped in sub-optimal locations if long-term conditions and cycles change unexpectedly [e.g., blue whales: @abrahms_memory_2019; bison: @merkle_spatial_2019]. *changes in bird migration, check for changes in mammals*
+
+* range shifts can help species overcome changing conditions, but they can also damage species that are being encroached upon, such as species that either fail to adapt (i.e., do not shift, too) or species that **cannot** shift
 
 \newpage
 
