--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -186,6 +186,10 @@ The concept of a home range has a long history in ecological research as an indi
 
 Although range-resident animals will generally have smaller $\vpos$ than migratory and nomadic animals, $\vpos$ is not sufficient to distinguish between range residency, migration, and nomadism, since $\vpos$ determines the scale and size of an animal's spatial needs but not its behavior. Instead, the animal's $\tau_p$, $\tau_v$, and $\bar v$ can help discriminate between different kinds of movement. Animals with a $\tau_p$ shorter than a year are likely range-resident, while animals with a $\tau_p$ on the order of a year are likely to be migratory (as long as their life expectancy is greater than a year). In contrast, when an animal's $\tau_p$ is on the order of its expected lifespan, it is most often nomadic, since it is unlikely to return to locations it visited in the past.
 
+***Not sure if we need this or if we can tie it in somewhere:***
+
+Recent improvements in animal tracking technologies (e.g., increasing sampling duration and frequency of GPS units) have allowed scientists to demonstrate that changes in animals movement and behavior may be more common than previously thought [leatherback turtles: @hays_flexible_2006; bald eagles: @wheat_migrate_2017]. However, the models we use in this paper assume an animal's large-scale behavior and movement to remain consistent over time...
+
 ### Advantages of modeling animal movement as a stochastic process
 
 Predicting animal movement using stochastic models may seem less straightforward and more complex than using deterministic models, but ignoring the causes and decisions that determine the movement allows us to focus more on the animal's movement and behavior and less on recognizing each cause of movement. Animals may temporarily change their behavior in response to many causes, including predators [@ref], competitors [@ref], weather [@ref], and mates or mating periods [feral cats: @zhang_home_2022; yellow mongoose: @cronk_home_2021].
@@ -223,7 +227,7 @@ knitr::include_graphics('../figures/mean-abundance-hr-hypotheses.png')
 
 * add refs to generalize beyond terrestrial mammals
 
-\noindent While animals' needs vary greatly between taxonomic groups, some needs are essential for most species for survival and reproduction. All heterotrophic organisms require sources of chemical energy (i.e., food), water, and various limiting nutrients to survive, grow, and reproduce [@baldwin_nutritional_1984; @reich_body_2001; @ref]. Failing to acquire sufficient resources is likely to result in lower fitness, changes in physiology or behavior, physiological damage, inability to reproduce, and death. Motile organisms can move to new locations in search of resources, but they must also account for a higher metabolism [@ref] and movement costs [@ref]. The size of an animal's spatial needs is often hypothesized to be depend on resource abundance [@burt_territoriality_1943], such that spatial needs increase when resources are low, but the relationship is likely not monotonic nor linear [see figure \@ref(fig:mu-hyp) and @nilsen_can_2005; @ex]. Low values of $\e(R)$ force animals to have larger home ranges [@relyea_home_2000; @nilsen_can_2005; @herfindal_prey_2005; @bista_effect_2022], migrate to better locations [@samarra_movements_2017; @middleton_green-wave_2018; @geremia_migrating_2019], or move nomadically [@teitelbaum_beyond_2019; @nandintsetseg_variability_2019], although large-scale changes in behavior (such as shifts to dispersal, migration, and nomadism) are more likely to occur over evolutionary timescales rather than an animal's lifespan \@ref(fig:mu-hyp). As $\e(R)$ increases, we expect animals' spatial requirements to decrease nonlinearly until they reach the smallest amount of space required to survive [see @relyea_home_2000; @bista_effect_2022, although the latter uses models which assumes the effect to be linear].
+\noindent While animals' needs vary greatly between taxonomic groups, some needs are essential for most species for survival and reproduction. All heterotrophic organisms require sources of chemical energy (i.e., food), water, and various limiting nutrients to survive, grow, and reproduce [@baldwin_nutritional_1984; @reich_body_2001; @ref]. Failing to acquire sufficient resources is likely to result in lower fitness, changes in physiology or behavior, physiological damage, inability to reproduce, and death. Motile organisms can move to new locations in search of resources, but they must also account for a higher metabolism [@ref] and movement costs [@ref]. The size of an animal's spatial needs is often hypothesized to be depend on resource abundance [@burt_territoriality_1943], such that spatial needs increase when resources are low, but the relationship is likely not linear [see figure \@ref(fig:mu-hyp) and @nilsen_can_2005; @ex]. Low values of $\e(R)$ force animals to have larger home ranges [@relyea_home_2000; @nilsen_can_2005; @herfindal_prey_2005; @bista_effect_2022], migrate to better locations [@samarra_movements_2017; @middleton_green-wave_2018; @geremia_migrating_2019], or move nomadically [@teitelbaum_beyond_2019; @nandintsetseg_variability_2019], although large-scale changes in behavior (such as shifts to dispersal, migration, and nomadism) are more likely to occur over evolutionary timescales rather than an animal's lifespan \@ref(fig:mu-hyp). As $\e(R)$ increases, we expect animals' spatial requirements to decrease nonlinearly until they reach the smallest amount of space required to survive [see @relyea_home_2000; @bista_effect_2022, although the latter uses models which assumes the effect to be linear].
 
 Animals living in large groups will often require larger home ranges because they will have to share resources with conspecifics [@prox_framework_2020], but larger home ranges can be harder to defend and also result in higher rates of competition and movement costs [@grant_whether_1993; @jetz_scaling_2004; but also see @dickie_resource_2022]. It is unclear when animals switch from range residency to migration or nomadism (or vice-versa), but understanding the connection between the types of movement is important for quantifying the effect of resource abundance on animal's spatial needs. From a quantitative perspective, the switch is related to an animal's home range crossing time (or positional autocorrelation, $\tau_p$). As the amount of space an animal uses over its lifespan, the amount of time required to cross the area ($\tau_p$) will also increase, so animals with $\tau_p$ on the order of their expected lifespan will necessarily be nomadic.
 
@@ -251,7 +255,7 @@ knitr::include_graphics('../figures/habitat-examples-constant-variance.png')
 
 \noindent Consider the simplistic scenario where $\e(R) = \mu$ changes over time but $\var(R) = \sigma^2$ is constant over time and space (and non-zero, see figure \@ref(fig:multipanel-constant-var)a). We can use the notation $R \sim \Gamma\big(\mu(t), \sigma^2\big)$ to indicate that the resource abundance follows a Gamma distribution with a mean that changes over time (i.e., the expected value is a function of time) while the variance is constant (figure \@ref(fig:multipanel-constant-var)b). Since $R$ is spatiotemporally random, an animal that moves in the landscape will not find the same $R$ at different time points or throughout the habitat (figures \@ref(fig:multipanel-constant-var)c-d). However, if $\e(R) = \mu(t)$ changes repetitively and regularly over time (e.g. peaks each spring), an animal may learn to predict times of high or low $R$ [e.g., @falcon-cortes_hierarchical_2021; @geremia_migrating_2019; @abrahms_memory_2019]. However, since $\e(R)$ does not vary predictably over space, it will not be possible to predict the location of locations with high or low $R$.
 
-This model is somewhat simplistic, but its simplicity makes it easy to fit and conceptualize. Such a model may be appropriate in regions with little to no changes in variability and where unpredictable events occur at a similar frequency over time, or when data availability is too low to produce appreciable measures of variance. Examples of temporally homogeneous habitats include regions where productivity remains fairly predictable throughout the year (e.g., equatorial rain forests or highly homogeneous deserts). When productivity is approximately stable over long periods of time, it may be possible to further simplify the model by assuming a constant mean, but this is rarely the case [@refs; but see @refs]. Most often, $\e(R)$ will vary over time, and animals' behaviors will change in response. Additionally, when data availability is sufficiently high to produce precise estimates of $\var(R)$, the effect of $\var(R)$ on animals' $\vpos$ should be estimated before assuming the effect is negligible. The need to account for $\var(R)$ is compounded by recent changes in climate, which exposes species to novel situations and increasingly common stochastic events [@ipcc_global_2018; @noonan_situ_2018]. Additionally, anthropogenic structures and urban areas reduce the habitat available to many terrestrial species [@wilson_habitat_2016], who struggle to move in fragmented [@fahrig_non-optimal_2007], human-dominated landscapes [@tucker_moving_2018]. Although some species rely on anthropogenic areas and structures for predicable and dependable sources of resources [steppe rat snake: @yu_artificial_2022; yellow mongoose: @cronk_home_2021; common octopus: @arechavala-lopez_common_2019; raccoon dog: @mitsuhashi_home_2018; coyote: @peron_periodic_2017], anthropogenic environments can be highly unpredictable [@ref] and pose high mortality risks [@noonan_roads_2021; @refs].
+This model is somewhat simplistic, but its simplicity makes it easy to fit and conceptualize. Such a model may be appropriate in regions with little to no changes in variability and where unpredictable events occur at a similar frequency over time, or when data availability is too low to produce appreciable measures of variance. Examples of temporally homogeneous habitats include regions where productivity remains fairly predictable throughout the year (e.g., equatorial rain forests or highly homogeneous deserts). When productivity is approximately stable over long periods of time, it may be possible to further simplify the model by assuming a constant mean, but this is rarely the case. Most often, $\e(R)$ will vary over time, and animals' behaviors will change in response. Additionally, when data availability is sufficiently high to produce precise estimates of $\var(R)$, the effect of $\var(R)$ on animals' $\vpos$ should be estimated before assuming the effect is negligible. The need to account for $\var(R)$ is compounded by recent changes in climate, which exposes species to novel situations and increasingly common stochastic events [@ipcc_global_2018; @noonan_situ_2018]. Additionally, anthropogenic structures and urban areas reduce the habitat available to many terrestrial species [@wilson_habitat_2016], who struggle to move in fragmented [@fahrig_non-optimal_2007], human-dominated landscapes [@tucker_moving_2018]. Although some species rely on anthropogenic areas and structures for predicable and dependable sources of resources [steppe rat snake: @yu_artificial_2022; yellow mongoose: @cronk_home_2021; common octopus: @arechavala-lopez_common_2019; raccoon dog: @mitsuhashi_home_2018; coyote: @peron_periodic_2017], anthropogenic environments can be highly unpredictable [@ref] and pose high mortality risks [@noonan_roads_2021; @refs].
 
 ```{r multipanel-changing-var, fig.cap="Fictitious example of variation in resource abundance in a heterogeneous environment with changing variance (even after accounting for changes in mean abundance). (a.) Although resource abundance ($R$, brown-green fill) varies over time and space, variance (dot color) is lowest at the beginning and end of the observational period and highest when $R$ peaks. (b.) Arbitrary definition of $R$ as following a Gamma distribution with mean $\\mu$ and variance $\\sigma^2$. (c.) Simulated animal movement at a time of lowest $\\e(R)$ and $\\var(R)$. (d.) Simulated animal movement at a time of peak $\\e(R)$ and $\\var(R)$.", out.width = '0.5\\textwidth', fig.align = 'right', wrapfigure = list('R', 0.5)}
 knitr::include_graphics('../figures/habitat-examples-changing-variance.png')
@@ -263,11 +267,7 @@ Most habitats with seasonal changes in climate will require models to account fo
 
 # Interactive effects of mean and variance in resource abundance
 
-<!--
-in stochastic environments:
-- higher spatial needs and possibly store resources for periods of scarcity, which are expected to get longer with climate change
-- heterogeneous environments, such as habitats with a high variety of patches, may force animals to move between patches if they cannot depend on a single one
--->
+Figure \@ref(fig:5-5-sims) illustrates the simulated average spatial requirements of an animal as a function of $\e(R)$ and $\var(R)$. The top row (constant $\var(R)$) shows how $\vpos$ changes as a function of $\e(R)$ while $\var(R)$ remains constant. (Some noise in $H$ is still present since $\var(R) \ne 0$ and thus $R$ is not constant). Note the nonlinear decrease in $H$ as $\e(R)$ increases at a constant slope (linear $\e(R)$), with larger changes when $\e(H)$ is low. This is because when $\e(R)$ is low, small additive changes in $\e(R)$ (e.g. from 1 to 2) can correspond to large multiplicative changes (i.e., 2 is twice as big as 1). Additionally, the 95% home range is more sensitive to changes in $\e(R)$ than the core home range $H_{50\%}$, since (not sure about this) larger quantiles (e.g., 95% > 50%) are more sensitive to changes in a distribution's variance (in this case $\propto \vpos$).
 
 Most habitats with seasonal changes in climate will require models to account for changes in both $\e(R)$ and $\var(R)$, since periods of high productivity can often be more variable than times of "dormancy" or lower productivity, and the variability in $R$ often changes both within and between years. In such cases, failing to account for $\var(R)$ can result in serious biases in the estimation of animals' spatial needs.
 
@@ -276,6 +276,8 @@ Most habitats with seasonal changes in climate will require models to account fo
 ```{r 5-5-sims, fig.cap="Simulated spatial requirements for animals living in habitats where the mean and variance in resource availability ($R$) are constant, linearly increasing, cyclical, drifting, or erratic over time. The bottom line indicates the animal's core home range (0.5 quantile), while the top line indicates the 0.95 utilization quantile. Note how both quantiles decrease nonlinearly as $\\e(R)$ increases, and they increase approximately linearly as $\\var(R)$ increases. Additionally, the variance in both quantiles is higher when $\\var(R)$ is higher, and changes in $\\var(R)$ have greater impacts when $\\e(R)$ is low.\nSimulations were run such that animals followed the same 1000 tracks at each time point starting from the point $\\langle 0, 0\\rangle$ until they reach satiety, at which point they returned to $\\langle 0, 0\\rangle$ over the same amount of time. The animal's spatial variance parameter was then calculated using an Ornstein-Uhlenbeck Foraging (OUF) model via the $\\tt{ctmm}$ package", out.width='100%'}
 knitr::include_graphics('../figures/mean-variance-5-by-5-hr-sims.png')
 ```
+
+The leftmost column of figure \@ref(fig:5-5-sims) (constant $\e(R)$) illustrates how an animal's home range may vary as $\var(R)$ changes over time while $\e(R)$ remains constant. Overall, $\vpos$ increases with $\var(R)$, although the 95% home range ($H_{95\%}$) is more sensitive to changes in $\var(R)$ than the 50% core home range ($H_{50\%}$). ***here*** <!--Additionally, the effect of $\var(R)$ on $H$ depends on $\e(R)$, since the effect of $\var(R)$ on $H$ is stronger when $\e(R)$ is low (see the bottom row with erratic $\var(R)$).-->
 
 Both $\e(H)$ and $\var(H)$ increase with $\var(R)$, although the 95% home range ($H_{95\%}$) is more sensitive to changes in $\var(R)$ than the core home range ($H_{50\%}$). Additionally, the effect of $\var(R)$ on $H$ depends on $\e(R)$, since the effect of $\var(R)$ on $H$ is stronger when $\e(R)$ is low (see the bottom row with erratic $\var(R)$).
 
@@ -335,7 +337,7 @@ In the case of animals whose spatial needs change over their lifetimes, one may 
 
 The ability of a specialist or obligate symbiont to shift its home range or adapt will likely depend strongly on its associate's ability to move or adapt, too.
 
-```{r moving-window-examples, fig.cap="Seven-day home range size of a tapir ($Tapirus~terrestris$) in response to changes in mean and variance in resource abundance. (a.) GPS tracking data of the tapir. (b.) Mean resource abundance esimated as the mean NDVI at the locations visited by the tapir. (c.) Varince in resource abundance esimated as the average variance in NDVI at the locations visited by the tapir. (d.) Estimated home range size during each seven-day period, based on 50\\% (bold) and 95\\% (thin) utilization quantiles. (e.) Effect of resource abundance on home range size. (f.) Effect of resource unpredictability on home range size. The effects in panels e and f were estimated using independent generalized linear models with Gamma conditional distributions. The tapir movement data corresponds to the individual named \"Anna\" from the Cerrado sample of Medici $et~al.$ (2022).", out.width='100%'}
+```{r mw-examples, fig.cap="Seven-day home range size of a tapir ($Tapirus~terrestris$) in response to changes in mean and variance in resource abundance. (a.) GPS tracking data of the tapir. (b.) Mean resource abundance esimated as the mean NDVI at the locations visited by the tapir. (c.) Varince in resource abundance esimated as the average variance in NDVI at the locations visited by the tapir. (d.) Estimated home range size during each seven-day period, based on 50\\% (bold) and 95\\% (thin) utilization quantiles. (e.) Effect of resource abundance on home range size. (f.) Effect of resource unpredictability on home range size. The effects in panels e and f were estimated using two generalized linear models with Gamma families of distributions. The tapir movement data corresponds to the individual named \"Anna\" from the Cerrado sample of Medici $et~al.$ (2022).", out.width='100%'}
 knitr::include_graphics('../figures/tapir-example.png')
 ```
 
