--- a/writing/env-var-review.bib
+++ b/writing/env-var-review.bib
@@ -3699,3 +3699,236 @@
 	year = {1981},
 	pages = {151--155},
 }
+
+@article{french_nutrient_1956,
+	title = {Nutrient {Requirements} for {Growth} and {Antler} {Development} in the {White}-{Tailed} {Deer}},
+	volume = {20},
+	issn = {0022541X},
+	url = {https://www.jstor.org/stable/3796954?origin=crossref},
+	doi = {10.2307/3796954},
+	number = {3},
+	urldate = {2022-11-16},
+	journal = {The Journal of Wildlife Management},
+	author = {French, C. E. and McEwen, L. C. and Magruder, N. D. and Ingram, R. H. and Swift, R. W.},
+	month = jul,
+	year = {1956},
+	pages = {221},
+}
+
+@article{smolko_soil_2022,
+	title = {Soil nutrients and deer density affect antler size of the {Carpathian} red deer},
+	volume = {102},
+	issn = {1616-5047, 1618-1476},
+	url = {https://link.springer.com/10.1007/s42991-021-00203-5},
+	doi = {10.1007/s42991-021-00203-5},
+	language = {en},
+	number = {1},
+	urldate = {2022-11-16},
+	journal = {Mammalian Biology},
+	author = {Smolko, Peter and Garaj, Peter and Lebocký, Tibor and Bútora, Ľubomír and Pataky, Tibor and Jaňáková, Zuzana and Babic, Martin and Veselovská, Alexandra and Kubala, Jakub and Kropil, Rudolf},
+	month = feb,
+	year = {2022},
+	pages = {119--130},
+}
+
+@article{giroux_role_2022,
+	title = {The role of environmental temperature on movement patterns of giant anteaters},
+	volume = {17},
+	issn = {1749-4877, 1749-4877},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/1749-4877.12539},
+	doi = {10.1111/1749-4877.12539},
+	language = {en},
+	number = {2},
+	urldate = {2022-11-16},
+	journal = {Integrative Zoology},
+	author = {Giroux, Aline and Ortega, Zaida and Bertassoni, Alessandra and Desbiez, Arnaud Léonard Jean and Kluyber, Danilo and Massocato, Gabriel Favero and De Miranda, Guilherme and Mourão, Guilherme and Surita, Luciana and Attias, Nina and Bianchi, Rita de Cassia and Gasparotto, Vinícius Peron de Oliveira and Oliveira‐Santos, Luiz Gustavo Rodrigues},
+	month = mar,
+	year = {2022},
+	pages = {285--296},
+}
+
+@article{ranc_memory_2022,
+	title = {Memory drives the formation of animal home ranges: {Evidence} from a reintroduction},
+	volume = {25},
+	issn = {1461-023X, 1461-0248},
+	shorttitle = {Memory drives the formation of animal home ranges},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/ele.13869},
+	doi = {10.1111/ele.13869},
+	language = {en},
+	number = {4},
+	urldate = {2022-11-16},
+	journal = {Ecology Letters},
+	author = {Ranc, Nathan and Cagnacci, Francesca and Moorcroft, Paul R.},
+	editor = {Coulson, Tim},
+	month = apr,
+	year = {2022},
+	pages = {716--728},
+	file = {Submitted Version:C\:\\Users\\stefa\\Zotero\\storage\\5M932DX5\\Ranc et al. - 2022 - Memory drives the formation of animal home ranges.pdf:application/pdf},
+}
+
+@article{randler_predator_2020,
+	title = {Predator avoidance behavior of nocturnal and diurnal rodents},
+	volume = {179},
+	issn = {03766357},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0376635720302126},
+	doi = {10.1016/j.beproc.2020.104214},
+	language = {en},
+	urldate = {2022-11-17},
+	journal = {Behavioural Processes},
+	author = {Randler, Christoph and Kalb, Jochen},
+	month = oct,
+	year = {2020},
+	pages = {104214},
+}
+
+@article{liu_predator_2022,
+	title = {Predator avoidance and food patch proximity influence sleeping site use of {Assamese} macaques in a limestone forest of {Southwest} {Guangxi}, {China}},
+	volume = {178},
+	issn = {2692-7691, 2692-7691},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/ajpa.24503},
+	doi = {10.1002/ajpa.24503},
+	language = {en},
+	number = {2},
+	urldate = {2022-11-17},
+	journal = {American Journal of Biological Anthropology},
+	author = {Liu, Guanghua and Liu, Shengyuan and Li, Youbang and Huang, Zhonghao},
+	month = jun,
+	year = {2022},
+	pages = {244--256},
+}
+
+@article{siegal_beaked_2022,
+	title = {Beaked whales and state-dependent decision-making: how does body condition affect the trade-off between foraging and predator avoidance?},
+	volume = {289},
+	issn = {0962-8452, 1471-2954},
+	shorttitle = {Beaked whales and state-dependent decision-making},
+	url = {https://royalsocietypublishing.org/doi/10.1098/rspb.2021.2539},
+	doi = {10.1098/rspb.2021.2539},
+	abstract = {Body condition is central to how animals balance foraging with predator avoidance—a trade-off that fundamentally affects animal fitness. Animals in poor condition may accept greater predation risk to satisfy current foraging ‘needs’, while those in good condition may be more risk averse to protect future ‘assets’. These state-dependent behavioural predictions can help interpret responses to human activities, but are little explored in marine animals. This study investigates the influence of body condition on how beaked whales trade-off foraging and predator avoidance. Body density (indicating lipid-energy stores) was estimated for 15 foraging northern bottlenose whales tagged near Jan Mayen, Norway. Composite indices of foraging (diving and echolocation clicks) and anti-predation (long ascents, non-foraging dives and silent periods reducing predator eavesdropping) were negatively related. Experimental sonar exposures led to decreased foraging and increased risk aversion, confirming a foraging/perceived safety trade-off. However, lower lipid stores were not related to a decrease in predator avoidance versus foraging, i.e. worse condition animals did not prioritize foraging. Individual differences (personalities) or reproductive context could offer alternative explanations for the observed state-behaviour relationships. This study provides evidence of foraging/predator-avoidance trade-offs in a marine top predator and demonstrates that animals in worse condition might not always take more risks.},
+	language = {en},
+	number = {1967},
+	urldate = {2022-11-17},
+	journal = {Proceedings of the Royal Society B: Biological Sciences},
+	author = {Siegal, Eilidh and Hooker, Sascha K. and Isojunno, Saana and Miller, Patrick J. O.},
+	month = jan,
+	year = {2022},
+	pages = {20212539},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\VFCMLLWI\\Siegal et al. - 2022 - Beaked whales and state-dependent decision-making.pdf:application/pdf},
+}
+
+@article{hintz_shovelnose_2013,
+	title = {Shovelnose sturgeon exhibit predator avoidance behaviour in the presence of a hungry predator},
+	volume = {29},
+	issn = {01758659},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/jai.12033},
+	doi = {10.1111/jai.12033},
+	language = {en},
+	number = {1},
+	urldate = {2022-11-17},
+	journal = {Journal of Applied Ichthyology},
+	author = {Hintz, W. D. and Grimes, G. T. and Garvey, J. E.},
+	month = feb,
+	year = {2013},
+	pages = {2--5},
+}
+
+@article{pretorius_movement_2020,
+	title = {Movement patterns of lesser flamingos \textit{{Phoeniconaias} minor} : nomadism or partial migration?},
+	volume = {2020},
+	issn = {1903-220X, 1903-220X},
+	shorttitle = {Movement patterns of lesser flamingos \textit{{Phoeniconaias} minor}},
+	url = {https://onlinelibrary.wiley.com/doi/10.2981/wlb.00728},
+	doi = {10.2981/wlb.00728},
+	language = {en},
+	number = {3},
+	urldate = {2022-11-17},
+	journal = {Wildlife Biology},
+	author = {Pretorius, Mattheuns D. and Leeuwner, Lourens and Tate, Gareth J. and Botha, André and Michael, Michael D. and Durgapersad, Kaajial and Chetty, Kishaylin},
+	month = dec,
+	year = {2020},
+	pages = {1--11},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\JK47BRY6\\Pretorius et al. - 2020 - Movement patterns of lesser flamingos Phoenicon.pdf:application/pdf},
+}
+
+@article{harvey_primate_1981-1,
+	title = {Primate home-range size and metabolic needs},
+	volume = {8},
+	issn = {0340-5443, 1432-0762},
+	url = {http://link.springer.com/10.1007/BF00300828},
+	doi = {10.1007/BF00300828},
+	language = {en},
+	number = {2},
+	urldate = {2022-11-17},
+	journal = {Behavioral Ecology and Sociobiology},
+	author = {Harvey, Paul H. and Clutton-Brock, T. H.},
+	month = apr,
+	year = {1981},
+	pages = {151--155},
+}
+
+@techreport{ikeda_home_2022,
+	type = {preprint},
+	title = {Home range and habitat selection of wild boar ({Sus} scrofa) in rural landscape},
+	url = {https://www.researchsquare.com/article/rs-2165365/v1},
+	abstract = {Abstract
+          
+            Wild boars are cause crop damage and are vectors causing infectious diseases in humans and livestock, thus wild boar population management is essential to control the damage. Because information on mammal home range and habitat selection is important for the management of target species, accurate spatial data would provide valuable information to establish population management scheme and infectious diseases countermeasure. In this study, we aimed to understand the home range of wild boars and their habitat selection during the daytime and nighttime. We captured seven wild boars in in central Gifu Prefecture, Japan, and monitored each individual from October 2020 to June 2022. We calculated the 95\% and 50\% home range of each individual for the entire monitoring period and for short-term period. Additionally, we investigated environmental characteristics at GPS locations during daytime and nighttime. In this study, the home range sizes from the minimum convex polygon method ranged from 0.32 to 28.51 km
+            2
+            , and the maximum distance between the location points was 7.6 km. Moreover, wild boars avoided anthropogenic environments during the daytime and selectively used cropland category during the nighttime. Therefore, wild boars had narrow home ranges depending on the anthropogenic environments. Consequently, wildlife managers could reduce agricultural damage caused by wild boars by managing bamboo forests and abandoned cultivated lands in the rural landscape. For infectious diseases, moreover, they should implement countermeasures against wild boars that are within 8 km of pig farms.},
+	urldate = {2022-11-17},
+	institution = {In Review},
+	author = {Ikeda, Takashi and Higashide, Daishi and Suzuki, Takaaki and Asano, Makoto},
+	month = oct,
+	year = {2022},
+	doi = {10.21203/rs.3.rs-2165365/v1},
+	file = {Submitted Version:C\:\\Users\\stefa\\Zotero\\storage\\P4SPDYI2\\Ikeda et al. - 2022 - Home range and habitat selection of wild boar (Sus.pdf:application/pdf},
+}
+
+@article{benitez_precipitation_2022,
+	title = {Precipitation, vegetation productivity, and human impacts control home range size of elephants in dryland systems in northern {Namibia}},
+	volume = {12},
+	issn = {2045-7758, 2045-7758},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/ece3.9288},
+	doi = {10.1002/ece3.9288},
+	language = {en},
+	number = {9},
+	urldate = {2022-11-17},
+	journal = {Ecology and Evolution},
+	author = {Benitez, Lorena and Kilian, J. Werner and Wittemyer, George and Hughey, Lacey F. and Fleming, Chris H. and Leimgruber, Peter and du Preez, Pierre and Stabach, Jared A.},
+	month = sep,
+	year = {2022},
+	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\43N9AMNI\\Benitez et al. - 2022 - Precipitation, vegetation productivity, and human .pdf:application/pdf},
+}
+
+@article{gibert_crossing_2016,
+	title = {Crossing regimes of temperature dependence in animal movement},
+	volume = {22},
+	issn = {1354-1013, 1365-2486},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/gcb.13245},
+	doi = {10.1111/gcb.13245},
+	language = {en},
+	number = {5},
+	urldate = {2022-11-17},
+	journal = {Global Change Biology},
+	author = {Gibert, Jean P. and Chelini, Marie‐Claire and Rosenthal, Malcolm F. and DeLong, John P.},
+	month = may,
+	year = {2016},
+	pages = {1722--1736},
+}
+
+@article{singh_migration_2012,
+	title = {From migration to nomadism: movement variability in a northern ungulate across its latitudinal range},
+	volume = {22},
+	issn = {1051-0761},
+	shorttitle = {From migration to nomadism},
+	url = {http://doi.wiley.com/10.1890/12-0245.1},
+	doi = {10.1890/12-0245.1},
+	language = {en},
+	number = {7},
+	urldate = {2022-11-17},
+	journal = {Ecological Applications},
+	author = {Singh, Navinder J. and Börger, Luca and Dettki, Holger and Bunnefeld, Nils and Ericsson, Göran},
+	month = oct,
+	year = {2012},
+	pages = {2007--2020},
+}
